--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "weather": "src/basic/weather-cli/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +22,9 @@
   },
   "homepage": "https://github.com/iammrdev/purpleschool-nodejs#readme",
   "dependencies": {
-    "node-notifier": "^10.0.1"
+    "axios": "^0.27.2",
+    "chalk": "^5.0.1",
+    "node-notifier": "^10.0.1",
+    "yargs": "^17.5.1"
   }
 }
