--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "build": "tsc",
+    "start": "tsc && node dist/index.js",
+    "watch": "tsc -w",
+    "dev": "yarn nodemon --inspect dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,8 @@
     "telegraf": "4.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.7"
+    "@types/node": "18.11.7",
+    "nodemon": "2.0.20",
+    "typescript": "4.8.4"
   }
 }
