--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "1.1.3",
     "dotenv": "16.0.3",
-    "telegraf": "4.10.0"
+    "telegraf": "4.10.0",
+    "telegraf-session-local": "2.1.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
