--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "4.5.0",
     "axios": "1.1.3",
     "dotenv": "16.0.3",
     "telegraf": "4.10.0",
