--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "tsc && node dist/index.js",
     "watch": "tsc -w",
-    "dev": "yarn nodemon --inspect dist/index.js"
+    "dev": "yarn nodemon --inspect dist/index.js",
+    "migrate": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
