--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -16,11 +16,15 @@
   "dependencies": {
     "@prisma/client": "4.5.0",
     "axios": "1.1.3",
+    "date-fns": "^2.29.3",
     "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "express-basic-auth": "^1.2.1",
     "telegraf": "4.10.0",
     "telegraf-session-local": "2.1.0"
   },
   "devDependencies": {
+    "@types/express": "4.17.15",
     "@types/node": "18.11.7",
     "nodemon": "2.0.20",
     "typescript": "4.8.4"
